--- a/src/main/resources/templates/departmentform.html
+++ b/src/main/resources/templates/departmentform.html
@@ -19,7 +19,7 @@
 <!--<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">-->
 
 <br/><br/>
-    <form action="#" th:action="@{/process}" th:object="${department}" method="post">
+    <form action="#" enctype="multipart/form-data" th:action="@{/process}" th:object="${department}" method="post">
 
         <input type="hidden" th:field="*{id}" />
 
@@ -31,6 +31,11 @@
 
         <span th:if="${#fields.hasErrors('headname')}" th:errors="*{headname}"></span>
         <br>
+
+        <input hidden="hidden" style="margin:10px; border-radius: 5px;" type="file" name="file" id="file">
+        <button type="button"  id="custom-button" class="btn btn-warning btn-lg" role="button">Choose the Head Photo</button>
+        <span id="custom-text">No file chosen, yet.</span>
+
         <input type="submit" value="Submit" class="btn btn-primary btn-lg" role="button"/>&nbsp;&nbsp;&nbsp;&nbsp;
         <a style="margin-top: 10px;" href="/" class="btn btn-primary btn-lg" role="button">See All information of the company. </a><br/>
 
@@ -49,5 +54,23 @@
     </div>
 
 </footer><br/>
+    <script type="text/javascript">
+        const realFileBtn= document.getElementById("file");
+        const customBtn=document.getElementById("custom-button");
+        const custom8Txt=document.getElementById("custom-text");
+
+        customBtn.addEventListener("click",function(){
+            realFileBtn.click();
+        });
+        realFileBtn.addEventListener("change",function () {
+            if(realFileBtn.value){
+                custom8Txt.innerHTML=realFileBtn.value+" has been chosen.";
+            }else {
+                custom8Txt.innerHTML="No file chosen,yet.";
+            }
+        });
+
+
+    </script>
 </body>
 </html>
