--- a/src/main/resources/templates/showdepartment.html
+++ b/src/main/resources/templates/showdepartment.html
@@ -28,10 +28,10 @@
 
         </div>
         <div  class="imgBx" style="margin:30px;" th:if="${department.headshot} !=null">
-            <img th:src="${department.headshot}" width="100px" height="180px" />
+            <img th:src="${department.headshot}" width="90px" height="160px" />
 
         </div>
-    </div>
+    </div><br/><br/>
     <table class="content-table">
         <thead>
     <tr>
