--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Home</title>
 <div th:replace="base::head"></div>
+</head>
+<body>
+<div th:replace="base::jumbotron1"></div>
 <nav id="nav_bar">
     <ul id="navmenu">
         <li><a class="current" href="/">Home</a></li>
