--- a/src/main/resources/templates/departmentlist.html
+++ b/src/main/resources/templates/departmentlist.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>Department List</title>
         <div th:replace="base::head"></div>
-
+    </head>
+    <body>
+        <div th:replace="base::jumbotron1"></div>
         <nav id="nav_bar">
             <ul id="navmenu">
                 <li><a  href="/">Home</a></li>
@@ -59,14 +61,8 @@
     </ul>
             <br/>
 </div>
-        <footer>
-            <div class="footer-main-div" style="margin-left: 300px; width: 1100px; height: 80px;">
-                <p style="color:#ffcce6; ">&copy; Copyright 2019 Emily Marinovich.</p>
-
-
-            </div>
-
-        </footer><br/>
+         <div th:replace="base::footer"></div>
+        <br/>
 
     </body>
 
