--- a/src/main/resources/templates/showdepartment.html
+++ b/src/main/resources/templates/showdepartment.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Show Departments</title>
 <div th:replace="base::head"></div>
+</head>
+<body>
+<div th:replace="base::jumbothron1"></div>
 
 <nav id="nav_bar">
     <ul id="navmenu">
