--- a/src/main/resources/templates/showemployee.html
+++ b/src/main/resources/templates/showemployee.html
@@ -6,7 +6,9 @@
     <title>Show Employees</title>
 
 <div th:replace="base::head"></div>
-
+</head>
+<body>
+<div th:replace="base::jumbotron1"></div>
 <nav id="nav_bar">
     <ul id="navmenu">
         <li><a  href="/">Home</a></li>
