--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background: url("/images/orange.jpg") no-repeat center center fixed;
+    background: url("/images/5sibmyp.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -56,7 +56,7 @@ body{
     width: 190px;
     height: 60px;
     line-height: 60px;
-    background-color:#A24545  ;
+    background-color:#86b300;/*#A24545  ;*/
     color: white ;
     border-radius: 3px;
     border: 1px solid #FFFFB2;
